messaging_app/messaging_app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: mysql
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app: mysql
  clusterIP: None
